assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');

/* CSS RESET */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}

blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


*, *::after, *::before {
    padding: 0;
    margin: 0;
    box-sizing: border-box
}

:root {
    --header-title-font: Lato, Arial, sans-serif;
    --header-body-font: "Open Sans", Arial, sans-serif;
    --background-color: #ffbbff;
    --text-color: #003200;
    --link-color: #000000;
    --link-hover-color: #002200;
    --link-visited-color: #000011;
    --tags-border-color: #000000;
    --tags-text-color: #000000;
    --tags-hover-background-color: #000000;
    --tags-hover-text-color: #ffffff;
    --heading-h1: #000000;
    --heading-h2: #000000;
    --heading-h3: #000000;
    --heading-h4: #000000;
    --dropdown-background-color: #eeffff;
    --dropdown-text-color: #eeffff;
    --dropdown-hover-background-color: #000000;
    --dropdown-hover-text-color: #ffffff;
    --nav-icons-color: invert(0%) sepia(98%) saturate(12%) hue-rotate(247deg) brightness(102%) contrast(101%);

}

@media (prefers-color-scheme: dark) {
:root {
    --background-color: #001500;
    --text-color: #ffffff;
    --link-color: #ffffff;
    --link-hover-color: #eeffff;
    --link-visited-color: #eeffff;
    --tags-border-color: #ffffff;
    --tags-text-color: #ffffff;
    --tags-hover-background-color: #ffffff;
    --tags-hover-text-color: #000000;
    --heading-h1: #ffffff;
    --heading-h2: #ffffff;
    --heading-h3: #ffffff;
    --heading-h4: #ffffff;
    --dropdown-background-color: #000000;
    --dropdown-text-color: #eeffff;
    --dropdown-hover-background-color: #eeffff;
    --dropdown-hover-text-color: #000000;
    --nav-icons-color: invert(100%) sepia(0%) saturate(0%) hue-rotate(131deg) brightness(102%) contrast(101%);

}
}

body {
    background-color: var(--background-color);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100vh;
    color: var(--text-color);
}

h1 {
    color: var(--heading-h1);
}

h2 {
    color: var(--heading-h2);
}

h3 {
    color: var(--heading-h3);
}

h4 {
    color: var(--heading-h4);
}

a {
    color: var(--link-color);
    text-decoration: none;
}

a:hover {
    color: var(--link-hover-color);
    text-decoration: underline;
}

a>li {
    list-style: none;
    margin: 0 10px;

}

a:visited {
    color: var(--link-visited-color);

}

li {
    list-style: none;
}

h1, h2, h3, h4 {
    font-family: Lato, Arial, Helvetica, sans-serif;
}



.nav-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 8px 16px;
    align-items: center;
}

.nav-header>a:hover {
    text-decoration: none;
}

.header-intro>p:nth-child(1) {
    font-family: var(--header-title-font), Arial, sans-serif;
    font-size: 1.2rem;
    letter-spacing: 1px;
}

.header-intro>p:nth-child(2) {
    font-family: var(--header-body-font), Arial, Helvetica, sans-serif;
    font-size: 1.0rem;
}

.header-nav {
    width: 300px;
}

.header-nav>ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-family: var(--header-title-font), Arial, Helvetica, sans-serif;
    font-size: 1.1rem;

}

.navigation-icon {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
}

.navigation-icon>img {
    filter: var(--nav-icons-color);
}

#contact-btn {
  align-items: center;
  /* background-color: #fee6e3; */
  background-color: #ffffff;
  border: 2px solid #111;
  border-radius: 8px;
  box-sizing: border-box;
  color: #111;
  cursor: pointer;
  display: flex;
  font-family: Inter,sans-serif;
  font-size: 16px;
  height: 48px;
  justify-content: center;
  line-height: 24px;
  max-width: 100%;
  padding: 0 25px;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

#contact-btn:after {
  background-color: #111;
  border-radius: 8px;
  content: "";
  display: block;
  height: 48px;
  left: 0;
  width: 100%;
  position: absolute;
  top: -2px;
  transform: translate(8px, 8px);
  transition: transform .2s ease-out;
  z-index: -1;
}

#contact-btn:hover:after {
  transform: translate(0, 0);
}

#contact-btn:active {
  /* background-color: #ffdeda; */
  background-color: black;
    color:  white;
  outline: 0;
}

#contact-btn:hover {
  outline: 0;
}


.latest-post {
    width: 400px;
    margin: 5rem auto;

}

.latest-post>h2 {
    font-size: 2.6rem;
    margin-bottom: 1rem;
    color: #414141;
    letter-spacing: 2px;
}

.latest-post p {
    font-size: 1.4rem;
    color: #262626
}

.footer-nav {
    /* position: fixed; */
    /* position: absolute; */
    /* bottom: 0; */
    width: 100%;
}

.footer-nav>ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    max-width: 300px;
    margin: 24px auto;
    font-family: var(--header-title-font), Arial, Helvetica, sans-serif;
    font-size: 1.1rem;
}

/* Content section */

#top {
    font-family: var(--header-title-font), Arial, Helvetica, sans-serif;
    font-size: 3rem;
    margin: 64px auto;
    text-align: center;
}


#content {
    color: var(--text-color);
    font-family: Lato, Arial, Helvetica, sans-serif;
    font-size: 1.3rem;
    margin: 0 auto;
}

#post-content>h1, #post-content>h2,#post-content>h3 {
    width: 60vw;
    margin: 48px auto;
}


#post-content>h2::before {
    content: "# ";
}


#post-content>h3::before {
    content: "## ";
}

#post-content>h1 {
    font-size: 2.0rem;
}

#post-content>h2 {
    font-size: 2.0rem;
    /* color: #e37979; */
}

#post-content>h3 {
    font-size: 1.8rem;
    /* color: #497328 */
}

.nav-section {
    font-weight: 500;
    font-family: "Open sans";
}

.main-container {
    width: 80vw;

}

#post-content p {
    width: 50vw;
    margin: 32px auto;
}



#post-content img {
    width: 100%;
}


/* Meatadata */

.metadata {
    text-align: center;
    margin: 64px auto;
    font-size: 1.1rem;

}

.metadata>p:first-child {
    font-weight: bold;
    margin: 8px;
}
.metadata>p:nth-child(2) {
    color: red;
}

#last-mod {
    font-weight: normal;
    font-style: italic;
}

.tags {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: 8px;
    color: var(--tags-text-color);
}

.tag-text {
    font-weight: bold;
    margin-right: 8px;
}

.tag-list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;

}

.tag-list>a {
    border: 1px solid var(--tags-border-color);
    margin: 4px;
    padding: 4px;
}


.tag-list>a:hover {
    background-color: var(--tags-hover-background-color);
    color: var(--tags-hover-text-color);
    text-decoration: none;
}

/* Code */
pre {
    margin: 48px 96px;
    padding: 1rem;
    white-space: pre-wrap;       /* css-3 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-break: break-all;

}



code {
    font-family: monospace;
    font-size: 1.1rem;
    /* background: white; */
}


/* POST LISTS */

.posts-list {
    display: flex;
    flex-direction: column;
    font-size: 1.1rem;
    text-align: center;
    width: 64vw;
    margin: 64px auto;
    gap: 40px
}

.posts-list h3 {
    font-size: 1.8rem;
    margin: 16px auto;
}


/* TAGS PAGE */

#tags {
    display: flex;
    flex-direction: column;
    margin: 64px auto;

}

#tags>h2 {
    font-size: 2.0rem;
    text-align: center;
    margin-bottom: 40px;
}

#tags>ul {
    display: flex;
    flex-direction: row;
    /* margin: 8px auto; */
    justify-content: center;
    flex-wrap: wrap;
}

#tags>ul>a {
    margin: 24px;
    border: 1px solid var(--tags-border-color);
    padding: 8px;
    text-decoration: none;

}

#tags>ul>a:hover {
    background-color: var(--tags-hover-background-color);
    color: var(--tags-hover-text-color);
}

/* DROPDOWN CATEGORIES */
/* Dropdown Button */
/* Dropdown Button */
.dropbtn {
  padding: 8px;
  /* font-size: 16px; */
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  margin: 8px;
  display: none;
  position: absolute;
  background-color: var(--dropdown-background-color);
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
  color: var(--text-color);
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
    background-color: var(--dropdown-hover-background-color);
    color: var(--dropdown-hover-text-color);
}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {display: block;}

/* Change the background color of the dropdown button when the dropdown content is shown */
/* .dropdown:hover .dropbtn {background-color: #3e8e41;} */


/* SEARCH */

#search {
    padding: 4px;
    font-size: 1.1rem;
}

.dropbtn>img {
    vertical-align: text-top;
}


/* ASIDE Nav */


.nav-section {
    margin: 64px auto;
    width: 90vw;
}

.nav-section a {
    text-decoration: underline;
    font-weight: bold;
}


.nav-section .previous::before {
    content: "Previous: ";
}


.nav-section .next::before {
    content: "Next: ";
}


.nav-section>aside {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 1rem;


}


/* MEDIA */

@media screen and (max-width: 768px) {
    #post-content p {
        width: 90vw;
        word-wrap: break-word;
        font-size: 1.2rem;
    }
    pre {
        margin: 0;

    }
    .header-nav {
        display: none;
    }

    #contact-btn{
        padding: 0 40px;
    }
    .header-intro {
        font-family: 0.9rem;
    }

    #search {
        width: 30px;
    }

    .latest-post {
        width: 90vw;
    }

    #top {
        font-size: 2.5rem;
        margin: 32px auto;
    }
    .metadata {
        margin: 32px auto;
    }


    .nav-section>aside {
        flex-direction: column;
    }
}



@media screen and (max-width: 1000px) {
    #post-content p {
        width: 80vw;
    }
}

